--- a/Vue3/01_初识Vue3/01_SDN引入.html
+++ b/Vue3/01_初识Vue3/01_SDN引入.html
@@ -6,17 +6,20 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="app">Helle world!</div>
+  <div id="app"></div>
+  <!-- cdn方式引入vue -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script>
-    const abc = {
-      template: '<h2>Hello world</h2>'
-    }
-    // const app = Vue.createApp(abc)
-    // app.mount('#app')
-    Vue.createApp(abc).mount('#app')
+    const app = Vue.createApp({
+      template: `<h2>{{msg}}</h2>`,
+      data() {
+        return {
+          msg: 'Hello World'
+        }
+      },
+    })
+    // 将app挂载到id为app的div上
+    app.mount('#app')
   </script>
-
-
 </body>
 </html>
