--- a/Vue3/01_初识Vue3/02_本地引入 .html
+++ b/Vue3/01_初识Vue3/02_本地引入 .html
@@ -6,17 +6,16 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="app">Helle world!</div>
+  <div id="app"></div>
+  <template id="my-app">
+    <h2>Hello World!</h2>
+  </template>
+  <!-- 本地引入 vue -->
   <script src="../js/vue.js"></script>
   <script>
-    const abc = {
-      template: '<h2>Hello world</h2>'
-    }
-    // const app = Vue.createApp(abc)
-    // app.mount('#app')
-    Vue.createApp(abc).mount('#app')
+    Vue.createApp({
+      template: '#my-app'
+    }).mount('#app')
   </script>
-
-
 </body>
 </html>
