--- a/Vue3/01_初识Vue3/04_计数器-vue.html
+++ b/Vue3/01_初识Vue3/04_计数器-vue.html
@@ -6,31 +6,27 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <h2>当前计数：{{ counter }}</h2>
+    <button @click="inc">+1</button>
+    <button @click="dec">-1</button>
+  </div>
   <script src="../js/vue.js"></script>
   <script>
     const app = Vue.createApp({
-      template: `
-        <h2>{{ counter }}</h2>
-        <button @click="inc">+1</button>
-        <button @click="dec">-1</button>
-      `,
       data() {
         return {
-          counter: 100,
-          message: 'Hello world'
+          counter: 0
         }
       },
       methods: {
         inc() {
-          console.log('点击了+1')
           this.counter++
         },
         dec() {
-          console.log("点击了-1")
           this.counter--
         }
-      },
+      }
     })
     app.mount('#app')
   </script>
