--- a/Vue3/02_基础语法/08_列表渲染v-for.html
+++ b/Vue3/02_基础语法/08_列表渲染v-for.html
@@ -7,47 +7,71 @@
 </head>
 <body>
   <div id="app">
-    <h1>电影列表</h1>
+    <!-- <ul> -->
+      <!-- 1. v-for遍历数组 -->
+      <!-- <li v-for="item in items">{{ item }}</li> -->
+
+      <!-- 获取当前项的 索引 -->
+      <!-- <li v-for="(item, index) in items">{{ index }} - {{ item }}</li> -->
+
+      <!-- 也可以使用 of 代替 in -->
+      <!-- <li v-for="item of items">{{ item }}</li> -->
+
+      <!-- 2. v-for遍历对象 -->
+      <!-- <li v-for="value in user">{{ value }}</li> -->
+      <!-- <li v-for="(value, key) in user">{{ key }} - {{ value }}</li> -->
+      <!-- <li v-for="(value, key, index) in user">{{ index }} - {{ key }} - {{ value }}</li> -->
+
+      <!-- 3. v-for里使用范围值 -->
+      <!-- <li v-for="n in 5">
+        List item {{ n }}
+      </li> -->
+    <!-- </ul> -->
+
+    <!-- 4. template上使用v-for -->
+    <!-- <template v-for="user in users">
+      <p>{{ user.name }}</p>
+      <span>{{ user.age }}</span>
+      <hr>
+    </template> -->
+
+    <!-- 5.数组变化侦测 -->
     <ul>
-      <!-- 1、v-for 遍历数组 -->
-      <!-- <li v-for="movie in movies">{{ movie }}</li> -->
-      <!-- <li v-for="(movie, index) in movies">{{ movie }} - {{ index + 1 }}</li> -->
-      <!-- 可以使用 of 作为分隔符替代 in -->
-      <!-- <li v-for="movie, index of movies">{{ movie }} + {{ index }}</li> -->
-      <!-- 2、v-for 遍历对象 -->
-      <!-- <li v-for="(value, key, index) in info">{{ index }} - {{ key }} - {{ value }}</li> -->
-      <!-- 3、在 v-for 里使用范围值 -->
-      <!-- <span v-for="n in 10">{{ n }}</span> -->
-      <!-- 4、数组变化侦测 -->
-      <li v-for="movie in movies">{{ movie }}</li>
-      <button @click="clickBtn">点击</button>
+      <li v-for="item in items">{{ item }}</li>
     </ul>
+    <button @click="clickBtn">数组变化</button>
+
   </div>
   <script src="../js/vue.js"></script>
   <script>
   const app = Vue.createApp({
     data() {
       return {
-        movies: ['从21世纪安全撤离', '解密', '死侍与金刚狼', '抓娃娃', '异人之下'],
-        info: {
-          name: '从21世纪安全撤离',
-          rate: 7.6,
-          director: '李阳'
+        items: ['Apple', 'Banana', 'Cherry'],
+        user: {
+          name: '张三',
+          age: 18,
+          email: 'zs@example.com'
         },
-        numbers: [1, 2, 3, 4, 5]
+        users: [
+          { name: '张三', age: 18 },
+          { name: '李四', age: 20 },
+          { name: '王五', age: 25 }
+        ]
       }
     },
     methods: {
       clickBtn() {
-        // this.movies.push('死侍')
-        // this.movies.pop()
-        // this.movies.shift()
-        // this.movies.unshift('死侍')
-        // this.movies.sort()
-        // this.movies.reverse()
-        // this.movies.splice(1, 0, '死侍')
-        this.movies.slice(1, 3)
-        // this.movies = this.movies.slice(1, 3)
+        // this.items.push('Orange')
+        // this.items.pop()
+        // this.items.shift()
+        // this.items.unshift('Orange')
+        // this.items.sort()
+        // this.items.reverse()
+        // this.items.splice(1, 0, 'Orange')
+        // this.items.slice(1, 3)
+        // this.items = this.items.slice(1, 3)
+        this.items[0] = 'Orange'
       }
     }
   })
