--- a/Vue3/02_基础语法/05_侦听器.html
+++ b/Vue3/02_基础语法/05_侦听器.html
@@ -7,54 +7,82 @@
 </head>
 <body>
   <div id="app">
-    <!-- <h2>{{ name }}</h2> -->
-    <h2>{{ info.name }}</h2>
-    <button @click="change()">change</button>
-    <button @click="changeInfo()">changeInfo</button>
-    <button @click="changeInfoName()">changeInfoName</button>
+    <!-- <p>你的名字: {{ firstName + lastName }}</p> -->
+    <!-- <p>你的名字: {{ user.name }}, 你的年龄: {{ user.age }}</p> -->
+    <p>
+      输入搜索内容:
+      <input v-model="searchQuery" :disabled="loading"/>
+    </p>
+    <p>{{ searchResults }}</p>
   </div>
   <script src="../js/vue.js"></script>
   <script>
     const app = Vue.createApp({
       data() {
         return {
-          name: '张三',
-          info: {name: '张三', age: 18}
+          firstName: '张',
+          lastName: '三',
+          user: {
+            name: '张三',
+            age: 18
+          },
+          loading: false,
+          searchQuery: '',
+          searchResults: []
+        }
+      },
+      methods: {
+        async fetchSearchResults(query) {
+          this.loading = true
+          try {
+            const response = await fetch(`https://api.example.com/search?q=${query}`);
+            this.searchResults = await response.json()
+          } catch (error) {
+            this.searchResults = 'Error! Could not reach the API. ' + error
+          } finally {
+            this.loading = false
+          }
+        }
+      },
+      computed: {
+        fullName() {
+          return this.firstName + this.lastName
         }
       },
       watch: {
-        // 1、侦听器的基本使用
-        // name(newValue, oldValue) {
-        //   console.log('新值：' + newValue, '旧值：' + oldValue);
+        firstName(newValue, oldValue) {
+          console.log(`firstName 从 ${oldValue} 变成了 ${newValue}.`)
+        },
+        // 默认只侦听对象的顶层属性变化
+        // user(newValue, oldValue) {
+        //   console.log(newValue, oldValue)
         // },
-        // 也支持把键设置成用 . 分隔的路径
-        // 'info.name'(newValue, oldValue) {
-        //   console.log('新值：' + newValue, '旧值：' + oldValue);
-        // }
-        // 2、深层侦听器 侦听所有嵌套的变更
-        // 无法侦听到嵌套内的数据变更
-        // info(newValue, oldValue) {
-        //   console.log('新值：' + newValue.name, '旧值：' + oldValue.name);
-        // }
-        info: {
+
+        // 侦听器 深度侦听
+        user: {
           handler(newValue, oldValue) {
-            console.log('新值：' + newValue.name, '旧值：' + oldValue.name);
+            console.log('新值：', newValue, '旧值：', oldValue)
           },
           deep: true
-        }
+        },
+        // 侦听器 立即执行
+        // firstName: {
+        //   handler(newValue) {
+        //     console.log(`firstName 内容: ${newValue}`)
+        //   },
+        //   immediate: true
+        // },
 
-      },
-      methods: {
-        change() {
-          this.name = '李四'
+        // 侦听计算属性
+        fullName(newValue, oldValue) {
+          console.log(`fullName 从 ${oldValue} 变成了 ${newValue}.`)
         },
-        changeInfo() {
-          this.info = {name: '李四'}
-        },
-        changeInfoName() {
-          this.info.name = '李四'
+        
+        // 侦听带有异步操作的属性
+        searchQuery(newValue) {
+          this.fetchSearchResults(newValue)
         }
-      },
+      }
     })
     app.mount("#app")
   </script>
